--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 				  <defs>
 				    <pattern id="image" x="0%" y="0%" height="100%" width="100%"
 				             viewBox="0 0 512 512">
-				      <image x="0%" y="0%" width="512" height="512" xlink:href="img/dp.jpg"></image>
+				      <image x="0%" y="0%" width="512" height="512" xlink:href="img/dp1.jpg"></image>
 				    </pattern>
 				  </defs>
-				  <circle cx="50%" cy="150" r="95" stroke="grey" stroke-width="3" fill="url(#image)" />
+				  <circle cx="50%" cy="150" r="180" stroke="grey" stroke-width="3" fill="url(#image)" />
 				</svg>
 				<div style="text-align: center;">
 					<h4>Tasfia Mashiat</h4>
