--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
 		<div class="row" style="text-align: center;">
 			<!-- <div class="col-lg-2"></div> -->
 			<div class="col-lg-4" >
-				<svg style="width:100%;" height="250">
+				<!-- <svg style="width:100%;" height="250">
 				  <defs>
 				    <pattern id="image" x="0%" y="0%" height="100%" width="100%"
 				             viewBox="0 0 512 512">
 				      <image x="0%" y="0%" width="512" height="512" xlink:href="img/dp1.jpg"></image>
 				    </pattern>
 				  </defs>
-				  <circle cx="50%" cy="150" r="180" stroke="grey" stroke-width="3" fill="url(#image)" />
-				</svg>
+				   <rect x="100" y="20" height="250" width='250' stroke="grey" stroke-width="3" fill="url(#image)" /> -->
+				<!-- </svg> -->
 				<div style="text-align: center;">
+					<image x="0%" y="0%" width="250" height="250" src="img/dp1.jpg"></image>
 					<h4>Tasfia Mashiat</h4>
 					<p>tmashiat@gmu.edu</p>
 
@@ -64,22 +65,21 @@
 			</div>
 			<div class="col-lg-6" style="margin-top: 50px;" >
 				<div id="home_div" class="row section" style="margin-left: 5px;margin-right: 5px;">
-					<p>I am a first-year PhD student at the College of Information Studies (iSchool), University of Maryland. My current research interests are Human-centered AI, Explainable AI, and Intelligent User Interface. In general, I am enthusiastic about projects that work towards social well-being by combining techniques from Data Science, Visualization and Human Computer Interaction.
-
+					<p> Hi, I am a 3rd year Ph.D. student in George Mason University. Currently working in the Data Mining Group. My advisors are Prof. Sanmay Das and Prof. Huzefa Rangwla.
 					<!-- My recent projects include- Visual causal analysis for transparent decision-making, Collaborative sense-making through causal inference, and Interactive tool for balancing visual biases (gender bias, skin-tone bias etc.) in live telecasts.</p> -->
 
-					<p>I completed my Bachelor of Science (B.Sc.) in Computer Science and Engineering from the University of Dhaka, Bangladesh. I hold an M.S. in Computer Science from Stony Brook University. </p>
+					<p>I completed my Bachelor of Science (B.Sc.) in Computer Science and Engineering from Khulna University of Engineering & Technology, Khulna, Bangladesh.  </p>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
 
-							<li>Feb, 2021: Accepted a summer internship offer at Bosch Research</li>
+							<!-- <li>Feb, 2021: Accepted a summer internship offer at Bosch Research</li>
 							<li>Feb, 2021: Submitted a paper to DIS 2021 </li>
 							<li>Feb, 2021: Paper accepted at CHI LBW 2021 </li>
 							<li>Feb, 2021: I will attend FAccT 2021 Doctoral Consortium </li>
 							<li>Sept, 2020: Submitted a paper to CHI 2021</li>
 							<li>Aug, 2020: Moved to UMD</li>
-							<li>July, 2020: Paper accepted at CSCW 2020!</li>
+							<li>July, 2020: Paper accepted at CSCW 2020!</li> -->
 							<!-- <li>Oct, 2019: Will attend VIS 2019 to present my poster</li> -->
 							<!-- <li>Jun, 2019: Started working as an RA</li> -->
 							<!-- <li>Feb, 2019: Presented my research on Graduate Research Sysmposium at Stony Brook</li> -->
