--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	      <a id="publications" class="nav-link" href="#">Publications</a>
 	    </li>
 	    <li class="nav-item">
-	      <a href="docs/Naimul_Resume.pdf" class="nav-link">CV</a>
+	      <a href="docs/Tasfia_Mashiat_cv.pdf" class="nav-link">CV</a>
 	    </li>
 	  </ul>
 	</nav>
