--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Naimul Hoque</title>
+	<title>Tasfia Mashiat</title>
 	<meta charset="UTF-8">
 
 	<!-- Google Fonts -->
@@ -21,10 +21,10 @@
 	      <a id="home" class="nav-link" href="#">Home</a>
 	    </li>
 	    <li class="nav-item">
-	      <a id="projects" class="nav-link" href="#">Projects</a>
+	      <!-- <a id="projects" class="nav-link" href="#">Projects</a> -->
 	    </li>
 	    <li class="nav-item">
-	      <a id="publications" class="nav-link" href="#">Publications</a>
+	      <!-- <a id="publications" class="nav-link" href="#">Publications</a> -->
 	    </li>
 	    <li class="nav-item">
 	      <a href="docs/Tasfia_Mashiat_cv.pdf" class="nav-link">CV</a>
