updated recent news

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
+							<li>May, 2021: Started working as Graduate Research Assistant</li>
+							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li>
+							<li>April, 2021: Submitted a paper to ECML PKDD 2021 </li>
 
 							<!-- <li>Feb, 2021: Accepted a summer internship offer at Bosch Research</li>
-							<li>Feb, 2021: Submitted a paper to DIS 2021 </li>
 							<li>Feb, 2021: Paper accepted at CHI LBW 2021 </li>
 							<li>Feb, 2021: I will attend FAccT 2021 Doctoral Consortium </li>
 							<li>Sept, 2020: Submitted a paper to CHI 2021</li>
