--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	      <!-- <a id="projects" class="nav-link" href="#">Projects</a> -->
 	    </li>
 	    <li class="nav-item">
-	      <!-- <a id="publications" class="nav-link" href="#">Publications</a> -->
+	      <a id="publications" class="nav-link" href="#">Publications</a>
 	    </li>
 	    <li class="nav-item">
 	      <a href="docs/Tasfia_Mashiat_cv.pdf" class="nav-link">CV</a>
@@ -142,14 +142,29 @@
 					</div>
 
 				</div>
-				<div id="publications_div" class="row section" style="display:none;margin-left:5px;margin-right: 5px;">
+				<div id="publications_div" class="row section" style="margin-left:5px;margin-right: 5px;">
 					<h4>Publications</h4>
 
 					<ul>
 						 <li>
-					        	<b>Md Naimul Hoque</b>, Klaus Mueller. Outcome-Explorer: A Causality Guided Interactive Visual Interface for Interpretable Algorithmic Decision Making. 2021. <a href="https://arxiv.org/abs/2101.00633"> (Preprint) </a>
+					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Progress)</b> <a href="https://drive.google.com/file/d/1a8NpgVIb05RiY0BilfR6zFYKPfJUsM99/view">. Pre-print</a>
+
+
 					    </li><br>
-					    <li>
+
+							<li>
+ 					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Fairness-Aware Resource Assignment: A Case Study on Policing. 2021.<b>The 15th Workshop for Women in Machine Learning (WiML), Neural Information Processing Systems (NeurIPS 2020)</b> <a href="https://drive.google.com/file/d/1AG9JoIl0MbiaeGW9-Q_x4Gkt4S_hGHfP/view">. Poster</a>
+
+ 					    </li><br>
+
+							<li>
+ 					        		Nur Imtiazul Haque, Kazi Md. Rokibul Alam, <b>Tasfia Mashiat,</b>Yasuhiko Morimoto. A Technique to Enrich the Secrecy Level of High Capacity Data Hiding Steganography Technique in
+				 							JPEG Compressed Image.<b> International Conference on Networking, Systems and Security (NSysS
+				 							2018), Dhaka, Bangladesh.</b> <a href="https://ieeexplore.ieee.org/document/8631377"> Paper</a>
+
+ 					    </li><br>
+
+					    <!-- <li>
 					        	Bhavya Ghai, <b>Md Naimul Hoque </b>,  Klaus Mueller. WordBias: An Interactive Visual Tool for Exploring Intersectional Social Biases Encoded in Word Embeddings. <b>CHI LBW 2021. </b>
 					    </li><br>
 
@@ -164,7 +179,7 @@
 
 		                <li><b>Md Naimul Hoque</b>, Rawshan E. Fatima, Manash Mandal, Nazmus Saquib. Evaluating gender portrayal in Bangladeshi TV. Machine Learning for the Developing World, <b>NIPS 2017 Workshop.</b> <a href="https://arxiv.org/pdf/1711.09728.pdf"> (pdf) </a></li> <br>
 
-		                <li><b>Md Naimul Hoque</b>, Chowdhury Farhan Ahmed, Nicolas Lachiche, Carson K. Leung, Hao Zhang. Reframing in Clustering. 2016 IEEE 28th International Conference on Tools with Artificial Intelligence (ICTAI). <a href="./docs/RfmCluster_ICTAI2016.pdf"> (pdf) </a></li>
+		                <li><b>Md Naimul Hoque</b>, Chowdhury Farhan Ahmed, Nicolas Lachiche, Carson K. Leung, Hao Zhang. Reframing in Clustering. 2016 IEEE 28th International Conference on Tools with Artificial Intelligence (ICTAI). <a href="./docs/RfmCluster_ICTAI2016.pdf"> (pdf) </a></li> -->
 		            </ul>
 				</div>
 			</div>
