--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	      <a id="home" class="nav-link" href="#">Home</a>
 	    </li>
 	    <li class="nav-item">
-	      <!-- <a id="projects" class="nav-link" href="#">Projects</a> -->
+	      <a id="projects" class="nav-link" href="#">Projects</a>
 	    </li>
 	    <li class="nav-item">
 	      <a id="publications" class="nav-link" href="#">Publications</a>
@@ -76,69 +76,8 @@
 							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li>
 							<li>April, 2021: Submitted a paper to ECML PKDD 2021 </li>
 							<li>December, 2020: Presented a Poster on WiML Workshop, NeurIPS 2020 </li>
-
-							<!-- <li>Feb, 2021: Accepted a summer internship offer at Bosch Research</li>
-							<li>Feb, 2021: Paper accepted at CHI LBW 2021 </li>
-							<li>Feb, 2021: I will attend FAccT 2021 Doctoral Consortium </li>
-							<li>Sept, 2020: Submitted a paper to CHI 2021</li>
-							<li>Aug, 2020: Moved to UMD</li>
-							<li>July, 2020: Paper accepted at CSCW 2020!</li> -->
-							<!-- <li>Oct, 2019: Will attend VIS 2019 to present my poster</li> -->
-							<!-- <li>Jun, 2019: Started working as an RA</li> -->
-							<!-- <li>Feb, 2019: Presented my research on Graduate Research Sysmposium at Stony Brook</li> -->
-							<!-- <li>Nov, 2018: Presented a poster on CSCW 2018</li> -->
-							<!-- <li>Aug, 2018: Received the Chairman's Fellowship at Stony Brook</li> -->
 						</ul>
 
-					</div>
-
-				</div>
-				<div id="projects_div" class="row section" style="display:none;margin-left: 5px;margin-right: 5px;">
-
-					<!-- <div class="row"> -->
-						<!-- <div class="col-lg-3" style="margin-top: 20px;text-align: center;"> -->
-					<div>
-						<h4>Projects</h4>
-						<ul>
-							<li>
-								<a href="./projects/causality-transparency.html"><img class="img-thumbnail" src="img/loan8.png" alt="img/causality.png" width="150" ></a>
-								<label>Causal Inference for Interpretable Decision Making</label>
-							</li><br>
-							<li>
-								<a href="./projects/visual_bias.html"><img class="img-thumbnail" src="img/interface.png" alt="img/tv-series.png" width="150" ></a>
-								<label> Balance Gender and Skin-tone Presence in Live Telecast</label>
-							</li><br>
-							<!-- <li>
-								<a href="./projects/charts-to-music.html"><img class="img-thumbnail" src="img/charts-to-music.png" alt="img/tv-series.png" width="150" ></a>
-								<label>Using Natural Sounds for Accessible Charts</label>
-							</li><br> -->
-							<li>
-								<a href="projects/gender_portrayal.html"><img class="img-thumbnail" src="img/gender.png" alt="img/gender.png" width="150" ></a>
-								<label>Gender Portrayal in Bangladeshi TV</label>
-							</li><br>
-							<li>
-								<a href="projects/kaggle.html"><img class="img-thumbnail" src="img/map_users.png"
-									alt="img/tv-series.png" width="150" ></a>
-								<label>Kaggle Analytics: Examining Data Science in the Wild</label>
-							</li><br>
-							<li>
-								<a href="projects/crime_news.html"><img class="img-thumbnail" src="img/crime.jpg"
-								alt="img/tv-series.png" width="150" ></a>
-								<label>Crime News in Bangladeshi Newspapers</label>
-							</li><br>
-							<li>
-								<a href="./projects/tv-series.html"><img class="img-thumbnail" src="img/tv-series.png"
-								alt="img/tv-series.png" width="150" ></a>
-								<label>TV Series Watching Trends in Bangladesh</label>
-							</li><br>
-							<li>
-								<a href="projects/reframing.html"><img class="img-thumbnail" src="img/reframing.png"
-								alt="img/tv-series.png" width="150" ></a>
-								<label>Reframing: A Reusuable Transfer Learning Technique</label>
-
-							</li>
-
-						</ul>
 					</div>
 
 				</div>
@@ -163,25 +102,62 @@
 				 							2018), Dhaka, Bangladesh.</b> <a href="https://ieeexplore.ieee.org/document/8631377"> Paper</a>
 
  					    </li><br>
-
-					    <!-- <li>
-					        	Bhavya Ghai, <b>Md Naimul Hoque </b>,  Klaus Mueller. WordBias: An Interactive Visual Tool for Exploring Intersectional Social Biases Encoded in Word Embeddings. <b>CHI LBW 2021. </b>
-					    </li><br>
-
-					    <li><b>Md Naimul Hoque</b>, Nazmus Saquib, Syed Masum Billah, and Klaus Mueller. Toward Interactively Balancing the Screen Time of Actors Based on Observable Phenotypic Traits in Live Telecast. <b>ACM CSCW 2020. </b><a href="./docs/Screen-Balancer.pdf"> (pdf) </a>
-					    </li><br>
-
-
-					    <li>
-					        	<b>Md Naimul Hoque</b>, Darius Coelho, Klaus Mueller. Examining the Visualization Practices of Data Scientists on Kaggle. <b> InfoVis Poster 2019. </b> <a href="./docs/Kaggle_Analysis.pdf"> (pdf) </a>
-					    </li><br>
-						<li>Md Mehedi Hassan, Ashik Adnan, Asif M. Saleheen, <b>Md Naimul Hoque</b>, Understanding the Patterns of Crime Reports in a Popular Bangladeshi Newspaper. <b>Companion of CSCW 2018. </b><a href="./docs/cscwp067-hassanA.pdf"> (pdf) </a></li><br>
-
-		                <li><b>Md Naimul Hoque</b>, Rawshan E. Fatima, Manash Mandal, Nazmus Saquib. Evaluating gender portrayal in Bangladeshi TV. Machine Learning for the Developing World, <b>NIPS 2017 Workshop.</b> <a href="https://arxiv.org/pdf/1711.09728.pdf"> (pdf) </a></li> <br>
-
-		                <li><b>Md Naimul Hoque</b>, Chowdhury Farhan Ahmed, Nicolas Lachiche, Carson K. Leung, Hao Zhang. Reframing in Clustering. 2016 IEEE 28th International Conference on Tools with Artificial Intelligence (ICTAI). <a href="./docs/RfmCluster_ICTAI2016.pdf"> (pdf) </a></li> -->
 		            </ul>
 				</div>
+
+				<div id="projects_div" class="row section" style="margin-left: 5px;margin-right: 5px;">
+
+					<div>
+						<h4>Projects</h4>
+						<ul>
+
+							<li>
+ 					        	<b>Equitable Resource Allocation in the Context of Homelessness</b><br>
+									 In the project, we aim
+									 to propose a statistically efficient approach to ensure equitable allocation of homelessness services
+									 within different subgroups of population based on protected attributes such as age, gender, race,
+									 etc. This is an on-going project.
+
+ 					    </li><br>
+							<li>
+ 					        	<b>Fair Assignment of Policing Resources</b><br>
+										We proposed a causality-based approach for the
+									 allocation of limited policing resources within neighborhoods while ensuring the allocation is fair.
+									 We conducted experiments on both synthetic and real-world data. We showed that following
+									 our approach both over-policing and under-policing can be reduced in areas with a significant
+									 difference in population demographic.
+
+ 					    </li><br>
+							<li>
+ 					        	<b>A Deep Neural Network Approach for Retrofitting Word Embeddings</b><br>
+										In this project,
+										we proposed a deep learning model that can identify morphologically related word embeddings
+										for languages with a high morpheme-per-word ratio in a sparse word vector domain. This project
+										was a part of the CS747: Deep Learning Course.
+
+ 					    </li><br>
+
+
+							 <li>
+  					        	<b>Examining The 4G/5G LTE Cellular Network Infrastructure(Advisor: Prof. Duminda Wijesekera)</b><br>
+											The goal of this project was to set up 4G LTE and 5G cellular network
+											testbeds to examine the data communication between User equipments and Base stations with
+											the core network. This project was conducted as a part of CS701: Research Experience in CS.
+
+  					    </li><br>
+								<li>
+   					        	<b> Examining the Patterns of Taxi-rides in NYC</b><br>
+											The main goal of this project was to
+											understand the demand pattern of taxi service in NYC through exploratory data analysis and machine intelligence. This project was conducted as a part of CS700: Research in CS.
+
+   					    </li><br>
+
+
+						</ul>
+					</div>
+
+				</div>
+
 			</div>
 			<div class="col-lg-4" style="margin-top: 50px;">
 
