--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
 					<p>tmashiat@gmu.edu</p>
 
 				</div>
+
+				<div class="row1" style="margin-left: 5px;margin-right: 5px; text-align: left;">
+         <h4> Achievements </h4>
+						<ul>
+							<li>Outstanding Graduate Teaching Assistant, Department of Computer Science, George Mason University (2021).</li>
+							<li>Recipient of the Computer Science Department’s Ph.D. Research Initiation Awards, George
+Mason University (2020)</li>
+							<li>Champion, Women Innovation Camp-2016, Arranged by A2I, ICT Division, Prime Minister’s
+Office, Bangladesh (2016).</li>
+							<li>Dean’s Award for Excellence in Academic Results in session 2015-2016. Khulna University of Engineering & Technology (KUET).</li>
+						</ul>
+
+
+				</div>
+
 			</div>
 			<div class="col-lg-6" style="margin-top: 50px;" >
 				<div id="home_div" class="row section" style="margin-left: 5px;margin-right: 5px;">
