--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Office, Bangladesh (2016).</li>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
+							<li> November, 2021: Passed Ph.D. Comprehensive Exam!</li>
 							<li>May, 2021: Started working as Graduate Research Assistant</li>
 							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li>
 							<li>April, 2021: Submitted a paper to ECML PKDD 2021 </li>
