--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Office, Bangladesh (2016).</li>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
-							<li> November, 2021: Passed Ph.D. Comprehensive Exam!</li>
+							<li>November, 2021: Passed Ph.D. Comprehensive Exam!</li>
 							<li>May, 2021: Started working as Graduate Research Assistant</li>
 							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li>
 							<li>April, 2021: Submitted a paper to ECML PKDD 2021 </li>
@@ -102,7 +102,7 @@ Office, Bangladesh (2016).</li>
 
 					<ul>
 						 <li>
-					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Progress)</b> <a href="https://drive.google.com/file/d/1a8NpgVIb05RiY0BilfR6zFYKPfJUsM99/view">. Pre-print</a>
+					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Submission)</b> <a href="https://drive.google.com/file/d/1a8NpgVIb05RiY0BilfR6zFYKPfJUsM99/view">. Pre-print</a>
 
 
 					    </li><br>
