updated pub and news

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@ Office, Bangladesh (2016).</li>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
+							<li>April, 2022: Paper Accepted in ACM FAccT 2022!</li>
+							<li>March, 2022: I will work as an Applied Scientist Intern at ML Solutions Lab, Amazon!</li>
 							<li>November, 2021: Passed Ph.D. Comprehensive Exam!</li>
 							<li>May, 2021: Started working as Graduate Research Assistant</li>
 							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li>
@@ -101,6 +103,11 @@ Office, Bangladesh (2016).</li>
 					<h4>Publications</h4>
 
 					<ul>
+						<li>
+									 <b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(Accepted ACM FAccT 2022)</b> <a href="https://arxiv.org/abs/2202.12334">. Pre-print</a>
+
+
+						 </li><br>
 						 <li>
 					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Submission)</b> <a href="https://drive.google.com/file/d/1a8NpgVIb05RiY0BilfR6zFYKPfJUsM99/view">. Pre-print</a>
 
