--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@ Office, Bangladesh (2016).</li>
 
 					<ul>
 						<li>
-									 <b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(To appear, ACM FAccT 2022)</b> <a href="https://arxiv.org/abs/2202.12334">. Pre-print</a>
+									 <b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(To Appear, ACM FAccT 2022)</b> <a href="https://arxiv.org/abs/2202.12334">. Pre-print</a>
 
 
 						 </li><br>
 						 <li>
-					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In progress)</b> 
+					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Progress)</b> 
 
 					    </li><br>
 
