--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Office, Bangladesh (2016).</li>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
+							<li>May, 2022: Served as a session chair in ACM FAccT 2022!</li>
 							<li>April, 2022: Paper Accepted in ACM FAccT 2022!</li>
 							<li>March, 2022: I will work as an Applied Scientist Intern at ML Solutions Lab, Amazon!</li>
 							<li>November, 2021: Passed Ph.D. Comprehensive Exam!</li>
@@ -104,12 +105,12 @@ Office, Bangladesh (2016).</li>
 
 					<ul>
 						<li>
-									 <b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(To Appear, ACM FAccT 2022)</b> <a href="https://arxiv.org/abs/2202.12334">. Pre-print</a>
+									 <b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171"></a>.
 
 
 						 </li><br>
 						 <li>
-					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Progress)</b> 
+					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Progress)</b>
 
 					    </li><br>
 
