--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Office, Bangladesh (2016).</li>
 			</div>
 			<div class="col-lg-6" style="margin-top: 50px;" >
 				<div id="home_div" class="row section" style="margin-left: 5px;margin-right: 5px;">
-					<p> Hi, I am a 3rd year Ph.D. student in George Mason University. Currently working in the Data Mining Group. My advisors are Prof. Sanmay Das and Prof. Huzefa Rangwla.
+					<p> Hi, I am a 4th year Ph.D. student in George Mason University. Currently working in the Data Mining Group. My advisor is Prof. Sanmay Das.
 					<!-- My recent projects include- Visual causal analysis for transparent decision-making, Collaborative sense-making through causal inference, and Interactive tool for balancing visual biases (gender bias, skin-tone bias etc.) in live telecasts.</p> -->
 
 					<p>I completed my Bachelor of Science (B.Sc.) in Computer Science and Engineering from Khulna University of Engineering & Technology, Khulna, Bangladesh.  </p>
