--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@ Office, Bangladesh (2016).</li>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
+							<li>October, 2022: Participated in Doctoral Consortium at ACM EAAMO 2022!</li>
+							<li>October, 2022: Served as a local chair in ACM EAAMO 2022!</li>
 							<li>June, 2022: Served as a session chair in ACM FAccT 2022!</li>
 							<li>April, 2022: Paper Accepted in ACM FAccT 2022!</li>
 							<li>March, 2022: I will work as an Applied Scientist Intern at ML Solutions Lab, Amazon!</li>
