updated recent news

--- a/index.html
+++ b/index.html
@@ -87,15 +87,17 @@ Office, Bangladesh (2016).</li>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
+							<li>February, 2023: Will in Doctoral Consortium at AAMAS 2023! </li>
+							<li>January, 2023: Paper accepted as Extended Abstract in AAMAS 2023! </li>
 							<li>October, 2022: Participated in Doctoral Consortium at ACM EAAMO 2022!</li>
 							<li>October, 2022: Served as a local chair in ACM EAAMO 2022!</li>
 							<li>June, 2022: Served as a session chair in ACM FAccT 2022!</li>
 							<li>April, 2022: Paper Accepted in ACM FAccT 2022!</li>
 							<li>March, 2022: I will work as an Applied Scientist Intern at ML Solutions Lab, Amazon!</li>
-							<li>November, 2021: Passed Ph.D. Comprehensive Exam!</li>
+							<!-- <li>November, 2021: Passed Ph.D. Comprehensive Exam!</li>
 							<li>May, 2021: Started working as Graduate Research Assistant</li>
-							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li>
-							<li>April, 2021: Submitted a paper to ECML PKDD 2021 </li>
+							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li> -->
+							<!-- <li>April, 2021: Submitted a paper to ECML PKDD 2021 </li> -->
 							<li>December, 2020: Presented a Poster on WiML Workshop, NeurIPS 2020 </li>
 						</ul>
 
@@ -107,12 +109,14 @@ Office, Bangladesh (2016).</li>
 
 					<ul>
 						<li>
-									 <b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171"></a>.
-
+							<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(To appear in AAMAS 2023 as an Extended Abstract)</b>
 
 						 </li><br>
 						 <li>
-					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(In Progress)</b>
+
+
+								<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171"></a>.
+
 
 					    </li><br>
 
