--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Office, Bangladesh (2016).</li>
 							<li>May, 2021: Started working as Graduate Research Assistant</li>
 							<li>May, 2021: Awarded as "Outstanding Graduate Assistant" by GMU CS</li> -->
 							<!-- <li>April, 2021: Submitted a paper to ECML PKDD 2021 </li> -->
-							<li>December, 2020: Presented a Poster on WiML Workshop, NeurIPS 2020 </li>
+							<!-- <li>December, 2020: Presented a Poster on WiML Workshop, NeurIPS 2020 </li> -->
 						</ul>
 
 					</div>
@@ -109,13 +109,13 @@ Office, Bangladesh (2016).</li>
 
 					<ul>
 						<li>
-							<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(To appear in AAMAS 2023 as an Extended Abstract)</b>
+							<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(To appear in AAMAS 2023 as Extended Abstract)</b>
 
 						 </li><br>
 						 <li>
 
 
-								<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171"></a>.
+								<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171">,Paper</a>.
 
 
 					    </li><br>
