--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Office, Bangladesh (2016).</li>
 						 <li>
 
 
-								<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171">,Paper</a>.
+								<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171">. Paper</a>.
 
 
 					    </li><br>
