--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Office, Bangladesh (2016).</li>
 					<div>
 						<h4> Recent News! </h4>
 						<ul>
-							<li>February, 2023: Will in Doctoral Consortium at AAMAS 2023! </li>
+							<li>February, 2023: Will participate in Doctoral Consortium at AAMAS 2023! </li>
 							<li>January, 2023: Paper accepted as Extended Abstract in AAMAS 2023! </li>
 							<li>October, 2022: Participated in Doctoral Consortium at ACM EAAMO 2022!</li>
 							<li>October, 2022: Served as a local chair in ACM EAAMO 2022!</li>
@@ -109,7 +109,7 @@ Office, Bangladesh (2016).</li>
 
 					<ul>
 						<li>
-							<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(To appear in AAMAS 2023 as Extended Abstract)</b>
+							<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(To appear in AAMAS 2023 as an Extended Abstract)</b>
 
 						 </li><br>
 						 <li>
