--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	      <a id="publications" class="nav-link" href="#">Publications</a>
 	    </li>
 	    <li class="nav-item">
-	      <a href="docs/Tasfia_Mashiat_cv.pdf" class="nav-link">CV</a>
+	      <a href="docs/Tasfia_Mashiat.pdf" class="nav-link">CV</a>
 	    </li>
 	  </ul>
 	</nav>
@@ -80,7 +80,7 @@ Office, Bangladesh (2016).</li>
 			</div>
 			<div class="col-lg-6" style="margin-top: 50px;" >
 				<div id="home_div" class="row section" style="margin-left: 5px;margin-right: 5px;">
-					<p> Hi, I am a 4th year Ph.D. student in George Mason University. Currently working in the Data Mining Group. My advisor is Prof. Sanmay Das.
+					<p> Hi, I am a Ph.D. Candidate in George Mason University. My advisor is Prof. Sanmay Das.
 					<!-- My recent projects include- Visual causal analysis for transparent decision-making, Collaborative sense-making through causal inference, and Interactive tool for balancing visual biases (gender bias, skin-tone bias etc.) in live telecasts.</p> -->
 
 					<p>I completed my Bachelor of Science (B.Sc.) in Computer Science and Engineering from Khulna University of Engineering & Technology, Khulna, Bangladesh.  </p>
