--- a/index.html
+++ b/index.html
@@ -34,13 +34,6 @@
 	<div class="container-fluid" >
 		<div class="row">
 			<div class="col-lg-12">
-				<!-- Grey with black text -->
-				<!-- <div class="menu">
-						<a id="home" href="#">Home</a>
-						<a id="projects" href="#">Projects</a>
-						<a id="publications" href="#">Publications</a>
-						<a href="docs/Naimul_Resume.pdf">CV</a>
-				</div> -->
 
 			</div>
 		</div>
@@ -109,26 +102,35 @@ Office, Bangladesh (2016).</li>
 
 					<ul>
 						<li>
-							<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Counterfactually Fair Dynamic Assignment: A Case Study on Policing. <b>(To appear in AAMAS 2023 as an Extended Abstract)</b>
 
-						 </li><br>
-						 <li>
+							<b>Tasfia Mashiat,</b> Alex DiChristofano, Patrick J. Fowler, Sanmay Das, Beyond Eviction Prediction: Leveraging Local Spatiotemporal Public Records to Inform Action. <b>(ACM FAccT 2024)</b> <a href="https://dl.acm.org/doi/10.1145/3630106.3658978">. Paper</a>.
+
+						</li><br>
+
+						<li>
+
+							Md Naimul Hoque, <b> Tasfia Mashiat</b>, Bhavya Ghai, Cecilia Shelton, Fanny Chevalier, Kari Kraus, Niklas Elmqvist. The HaLLMark Effect: Supporting Provenance and Transparent Use of Large Language Models in Writing with Interactive Visualization. <b>(ACM CHI 2024)</b><a href="https://dl.acm.org/doi/pdf/10.1145/3613904.3641895">. Paper</a>
+						</li><br>
+					
+						<li>
+							<b>Tasfia Mashiat</b>, Xavier Gitiaux, Huzefa Rangwala, Sanmay Das, Counterfactually Fair Dy- namic Assignment: A Case Study on Policing.<b>(AAMAS 2023)</b><a href="https://www.southampton.ac.uk/~eg/AAMAS2023/pdfs/p2526.pdf"> Extended Abstract</a>, <a href="docs/Extended_abs_poster.pdf"> Poster</a>
+
+						</li><br>
+						<li>
 
 
-								<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation. <b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171">. Paper</a>.
+							<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Patrick J. Fowler, Sanmay Das.Trade-offs between Group Fairness Metrics in Societal Resource Allocation.<b>(ACM FAccT 2022)</b> <a href="https://dl.acm.org/doi/abs/10.1145/3531146.3533171">. Paper</a>.
 
 
 					    </li><br>
 
-							<li>
- 					        	<b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Fairness-Aware Resource Assignment: A Case Study on Policing. 2021.<b>The 15th Workshop for Women in Machine Learning (WiML), Neural Information Processing Systems (NeurIPS 2020)</b> <a href="https://drive.google.com/file/d/1AG9JoIl0MbiaeGW9-Q_x4Gkt4S_hGHfP/view">. Poster</a>
+						<li>
+ 					        <b>Tasfia Mashiat,</b> Xavier Gitiaux, Huzefa Rangwala, Sanmay Das. Fairness-Aware Resource Assignment: A Case Study on Policing.<b>The 15th Workshop for Women in Machine Learning (WiML), Neural Information Processing Systems (NeurIPS 2020)</b> <a href="https://drive.google.com/file/d/1AG9JoIl0MbiaeGW9-Q_x4Gkt4S_hGHfP/view">. Poster</a>
 
  					    </li><br>
 
-							<li>
- 					        		Nur Imtiazul Haque, Kazi Md. Rokibul Alam, <b>Tasfia Mashiat,</b>Yasuhiko Morimoto. A Technique to Enrich the Secrecy Level of High Capacity Data Hiding Steganography Technique in
-				 							JPEG Compressed Image.<b> International Conference on Networking, Systems and Security (NSysS
-				 							2018), Dhaka, Bangladesh.</b> <a href="https://ieeexplore.ieee.org/document/8631377"> Paper</a>
+						<li>
+ 					        Nur Imtiazul Haque, Kazi Md. Rokibul Alam, <b>Tasfia Mashiat,</b>Yasuhiko Morimoto. A Technique to Enrich the Secrecy Level of High Capacity Data Hiding Steganography Technique in JPEG Compressed Image.<b> International Conference on Networking, Systems and Security (NSysS 2018), Dhaka, Bangladesh.</b> <a href="https://ieeexplore.ieee.org/document/8631377"> Paper</a>
 
  					    </li><br>
 		            </ul>
